# sidestore-id-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  dotenv.sample  oauth_config.sample.toml
.github/workflows/: docker.yml
migrations/2023-05-20-214209_create_users_table/: up.sql
migrations/2023-05-28-081606_create_app_review_signatures/: down.sql  up.sql
migrations/2024-02-06-205757_add_oauth_authorizations/: down.sql
src/: auth.rs  constants.rs  errors.rs  main.rs  util.rs
src/api/: app_review_controller.rs  auth_controller.rs  doc.rs  mod.rs  oauth2_controller.rs  ping_controller.rs  utils.rs
src/api/models/: app_reviews.rs  auth.rs  mod.rs  oauth2.rs
src/api/oauth2/: config.rs  mod.rs  operations.rs  oxide_auth_actix.rs  prelude.rs  state.rs  token_issuer.rs
src/config/: app.rs  mod.rs
src/db/: mod.rs  schema.rs
src/db/migrations/2024-02-06-205757_add_oauth_authorizations/: up.sql
src/db/models/: app_review.rs  mod.rs  oauth_authorization.rs  user.rs
src/middlewares/: auth.rs
src/services/: auth_service.rs
test-storage/: reviews_private_key.pem  reviews_public_key.pem
