[package]
name = "sidestore-id-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"

# A `dotenv` implementation for Rust
dotenvy = { version = "0.15.7", default-features = false }

# A generic serialization/deserialization framework
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# A safe, extensible ORM and Query builder
diesel = { version = "2.1.0", features = ["chrono", "r2d2", "postgres", "sqlite", "uuid"] }
diesel_migrations = "2.1.0"
diesel_logger = { version = "0.2.0", optional = true }

# Hash and verify passwords
bcrypt = "0.14.0"

# JWT library
jsonwebtoken = "8.3.0"

# UUID generation
uuid = { version = "1.3.3", features = ["serde", "v4"] }

# Date and time libraries
chrono = { version = "0.4.24", features = ["clock", "serde"], default-features = false }
chrono-tz = "0.8.2"
time = "0.3.21"

# Logging
log = "0.4.17"
env_logger = "0.10.0"

# Utilities
derive_more = "0.99.17"

[dev-dependencies]
cargo-watch = "8.4.0"
testcontainers = "0.14.0"